# TA-Autonomous-Robot-Navigation-Fuzzy-Lidar-Thermal

./: .gitignore  README.md  WORKFLOW_S1_S4.md  analyze_s7_refinement.py  fuzzy_log.txt  model_dump.txt  plot_fuzzy_mf.py  run_sim.sh  structure.txt
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
devel/: .catkin  _setup_util.py
experiment_data/: send_goal.py
experiment_data copy/: rename_ss.py
experiment_data copy/S1/: traj_trial_10.csv  traj_trial_3.csv  traj_trial_7.csv  traj_trial_9.csv
experiment_data copy/S2/: obstacles.csv  traj_obs_trial_2.csv  traj_obs_trial_3.csv  traj_obs_trial_4.csv  traj_obs_trial_6.csv  traj_obs_trial_7.csv  traj_obs_trial_9.csv  traj_trial_10.csv  traj_trial_2.csv  traj_trial_3.csv  traj_trial_4.csv  traj_trial_6.csv  traj_trial_9.csv
experiment_data copy/S3/: obstacles.csv  results.csv  traj_obs_trial_3.csv  traj_obs_trial_8.csv  traj_obs_trial_9.csv  traj_trial_1.csv  traj_trial_10.csv  traj_trial_3.csv  traj_trial_4.csv  traj_trial_5.csv  traj_trial_7.csv  traj_trial_9.csv
experiment_data copy/S4/: traj_obs_trial_2.csv  traj_obs_trial_4.csv  traj_obs_trial_5.csv  traj_obs_trial_6.csv  traj_obs_trial_8.csv  traj_trial_1.csv  traj_trial_10.csv  traj_trial_2.csv  traj_trial_5.csv
experiment_data copy/S5/: traj_trial_1.csv  traj_trial_3.csv  traj_trial_9.csv
experiment_data copy/S6/: results.csv  traj_obs_trial_1.csv  traj_obs_trial_10.csv  traj_obs_trial_4.csv  traj_obs_trial_5.csv  traj_obs_trial_6.csv  traj_obs_trial_7.csv  traj_obs_trial_8.csv  traj_obs_trial_9.csv  traj_trial_1.csv  traj_trial_10.csv  traj_trial_3.csv  traj_trial_7.csv  traj_trial_8.csv
experiment_data copy/S7/: traj_obs_trial_2.csv  traj_obs_trial_3.csv  traj_obs_trial_5.csv  traj_obs_trial_6.csv  traj_obs_trial_7.csv  traj_obs_trial_8.csv  traj_trial_1.csv  traj_trial_2.csv  traj_trial_4.csv  traj_trial_8.csv  traj_trial_9.csv
experiment_data copy/S8/: results.csv  traj_obs_trial_1.csv  traj_obs_trial_2.csv  traj_obs_trial_3.csv  traj_obs_trial_4.csv  traj_obs_trial_5.csv  traj_obs_trial_6.csv  traj_obs_trial_8.csv  traj_obs_trial_9.csv  traj_trial_2.csv  traj_trial_3.csv  (+1 more)
src/main_controller/: CMakeLists.txt  CMakeLists.txt.save
src/main_controller/config/: amcl.rviz  costmap_common_params.yaml  ekf.yaml  global_costmap_params.yaml  live.rviz
src/main_controller/data/: path_1.csv
src/main_controller/include/: control_layout.h  robot.h  robot_comhardware.h
src/main_controller/launch/: ASR_ITS_2.launch  ASR_ITS_L.launch  amcl.launch  asr_its.launch  controller.launch  ekf.launch  follow.launch  getdatarayhan.launch  icp_odom.launch  live.launch  localize_on_map.launch  mapping.launch  mapping_2.launch  realsense_mapping.launch  rtabmap.launch  rviz.launch  send_goal.launch
src/main_controller/maps/: KATK_1.yaml  KATK_V1.yaml  Lantai_L.2.yaml  TES.yaml  TES2.yaml  galeri_kanan.yaml  grit.yaml  katk.pgm  katk.yaml  katk_29_05_2023.pgm  katk_29_05_2023.yaml  lantai_L.yaml  outdoor1.pgm  outdoor1.yaml  ruangan_pak_djoko.yaml
src/main_controller/src/: comhardware.cpp  main.cpp  robot_main.cpp
src/main_controller/src/asr_its/: control_layout.cpp  robot.cpp  robot_comhardware.cpp  rs232.c
(+408 files in other folders)
